--- a/RecordRoster/Views/Album/Library.cshtml
+++ b/RecordRoster/Views/Album/Library.cshtml
@@ -1,43 +1,43 @@
-﻿
+﻿@using RecordRoster.Models 
+@model List<Album>
+
 @{
-    ViewBag.Title= "Album Library";
-    var albums = ViewBag.Albums as List<RecordRoster.Models.Album>;
+    ViewBag.Title = "Album Library";
 }
 
-<h2>Random Album</h2>
+<h2>Album Library</h2>
 
-<table border="1">
-    <tr>
-        <th>Cover</th>
-        <th>Title</th>
-        <th>Artist</th>
-        <th>Year</th>
-        <th>Actions</th>
-    </tr>
-    @foreach (var album in albums)
-            {
-                <tr>
-                    <td>
-                        <img src="@album.ImageUrl" alt="Album Cover" width="100" height="100">
-                    </td>
-                    <td><input type="text" class="title" value="@album.Title" data-id="@album.Id"></td>
-                    <td><input type="text" class="artist" value="@album.Artist" data-id="@album.Id"></td>
-                    <td><input type="number" class="year" value="@album.Year" data-id="@album.Id"></td>
-                    <td>
-                        <button class="saveBtn" data-id="@album.Id">Save</button>
-                        <button class="deleteBtn" data-id="@album.Id">Delete</button>
-                    </td>
-                </tr>
-            }
-</table>
+<p>
+    <a class="btn btn-outline-primary" href="@Url.Action("Add", "Album")">Add New Album</a>
+</p>
 
-<h3>Add a New Album</h3>
-<input type="text" id="newTitle" placeholder="Title">
-<input type="text" id="newArtist" placeholder="Artist">
-<input type="number" id="newYear" placeholder="Year">
-<input type="text" id="newImageUrl" placeholder="Image URL">
-<button id="addAlbumBtn">Add Album</button>
+@if (Model.Count == 0)
+{
+    <p>No albums were found in the database. Consider <a href="@Url.Action("Add", "Album")">adding one</a>!</p>
+}
+else
+{
+    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
+        @foreach (var album in Model)
+        {
+            <div class="col mb-4">
+                <div class="card h-100">
+                    <a href="@Url.Action($"Details/{album.Id}", "Album")">
+                        <img src="@album.Cover" class="card-img-top album-cover" alt="@album.Title cover">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">@album.Title</h5>
+                        <p class="card-text">@album.Artist (@album.ReleaseYear)</p>
+                        <div class="d-flex justify-content-between mt-3">
+                            @* TODO: Update form page *@
+                            <a href="@Url.Action($"Update/{album.Id}", "Album")" class="btn btn-primary btn-sm">Edit</a>
+                            <button class="btn btn-danger btn-sm deleteBtn" data-id="@album.Id">Delete</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
 
-<a href="@Url.Action("Index", "Album")" class="btn btn-primary">Back to Random Album</a>
-
-
+<a href="@Url.Action("Index", "Home")" class="btn btn-primary">&lt;- Back to Random Album</a>
