--- a/RecordRoster/Views/Home/About.cshtml
+++ b/RecordRoster/Views/Home/About.cshtml
@@ -1,9 +1,14 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
 
-    <p>Use this area to provide additional information.</p>
+<main aria-labelledby="title">
+    <h2 id="title">@ViewBag.Title</h2>
+
+    <p>RecordRoster is a neat, user-friendly MVC application for managing a collection of record albums with a randomizer, grid display, and simple but powerful management tools such as simple forms for adding and updating albums.</p>
+
+    <h3>Authors</h3>
+    <strong>Dakota Wolfgang</strong>: <a href="https://www.github.com/DakotaWolfgang" target="_blank">GitHub</a>
+    <br />
+    <strong>Jacob Noah</strong>: <a href="https://www.github.com/Jacob-Noah" target="_blank">GitHub</a>
 </main>
