--- a/RecordRoster/Views/Home/Index.cshtml
+++ b/RecordRoster/Views/Home/Index.cshtml
@@ -1,33 +1,28 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model RecordRoster.Models.Album
+
+@{
+    ViewBag.Title = "Home | Randomizer";
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
+<h2>Random Album</h2>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
-    </div>
-</main>
+@if (ViewBag.RandomAlbum != null)
+{
+    <img src="@ViewBag.RandomAlbum.Cover" alt="Album Cover" width="250" height="250" style="border-radius: 10px;">
+    <p><strong>Title:</strong> @ViewBag.RandomAlbum.Title </p>
+    <p><strong>Artist:</strong> @ViewBag.RandomAlbum.Artist </p>
+    <p><strong>Year:</strong> @ViewBag.RandomAlbum.ReleaseYear </p>
+}
+else
+{
+    <p>No albums found.</p>
+}
+
+<button id="randomizeBtn" class="btn btn-primary">Randomize 🎲</button>
+<a href="@Url.Action("Library", "Album")" class="btn btn-primary">Show Library 📚</a>
+
+<script>
+    document.getElementById("randomizeBtn").addEventListener("click", function () {
+        location.reload();
+    });
+</script>
