--- a/RecordRoster/Views/Album/Library.cshtml
+++ b/RecordRoster/Views/Album/Library.cshtml
@@ -11,6 +11,15 @@
     <a class="btn btn-outline-primary" href="@Url.Action("Add", "Album")">Add New Album</a>
 </p>
 
+@if (ViewBag.Error != null)
+{
+    <p class="text-danger">@ViewBag.Error</p>
+}
+else if (ViewBag.Message != null)
+{
+    <p class="text-success">@ViewBag.Message</p>
+}
+
 @if (Model.Count == 0)
 {
     <p>No albums were found in the database. Consider <a href="@Url.Action("Add", "Album")">adding one</a>!</p>
