Clean up & fix database/data model handling

--- a/RecordRoster/Views/Album/Add.cshtml
+++ b/RecordRoster/Views/Album/Add.cshtml
@@ -5,7 +5,7 @@
 <h2>Add a New Album</h2>
 <a href="@Url.Action("Library", "Album")" class="btn btn-primary">&lt;- Back to Library</a>
 
-<form method="post" action="@Url.Action("AddAlbum", "Album")">
+<form method="post" action="@Url.Action("Add", "Album")">
     <div class="px-4 pt-5">
         <label for="newTitle">Title</label>
         <input type="text" id="newTitle" name="Title" placeholder="Title" class="form-control">
