--- a/RecordRoster/Views/Song/Add.cshtml
+++ b/RecordRoster/Views/Song/Add.cshtml
@@ -23,7 +23,7 @@
     </div>
     <br />
 
-    <div class="form-check">
+    <div class="form-group">
         <label for="title">Title</label>
         <input type="text" id="title" name="Title" 
                placeholder="Song Title" class="form-control" />
