--- a/RecordRoster/Views/Album/Library.cshtml
+++ b/RecordRoster/Views/Album/Library.cshtml
@@ -1,4 +1,4 @@
-﻿@using RecordRoster.Models 
+﻿@using RecordRoster.Models
 @model List<Album>
 
 @{
@@ -23,6 +23,7 @@ else if (ViewBag.Message != null)
 @if (Model.Count == 0)
 {
     <p>No albums were found in the database. Consider <a href="@Url.Action("Add", "Album")">adding one</a>!</p>
+    <p>Populate with <a href="@Url.Action("PopulateWithSampleData", "Album")">sample data</a>?</p>
 }
 else
 {
