Changed DB Location from Master to its own RecordRosterDB Updated Logic to explicitly use an interface

--- a/RecordRoster/Views/Song/Update.cshtml
+++ b/RecordRoster/Views/Song/Update.cshtml
@@ -15,7 +15,7 @@
         <input type="hidden" name="AlbumId" value="@Model.AlbumId" />
         <input type="hidden" name="TrackNumber" value="@Model.TrackNumber" />
 
-        <div class-="form-group">
+        <div class="form-group">
             <label for="title">Song Title</label>
             <input type="text" id="title" name="Title" class="form-control"
                    value="@Model.Title" />
